[gd_scene load_steps=2 format=3 uid="uid://vtd8bjpnt7m1"]

[ext_resource type="Script" path="res://ui/MultiplayerUI.gd" id="1_ui_script"]

[node name="MultiplayerUI" type="CanvasLayer"]
script = ExtResource("1_ui_script")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -66.0
offset_right = 100.0
offset_bottom = 66.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Username:"

[node name="NameEntry" type="LineEdit" parent="VBoxContainer"]
layout_mode = 2
placeholder_text = "Name (Max 10)"
max_length = 10

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="HostButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "HOST"

[node name="AddressLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Join Address:"

[node name="AddressEntry" type="LineEdit" parent="VBoxContainer"]
layout_mode = 2
text = "127.0.0.1"
placeholder_text = "127.0.0.1"

[node name="JoinButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "JOIN"
